// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MemoryNode description node with child modules serializes to JSON consistently 1`] = `
"{
  "address": "ef978574a4d965f099661f3272a3286a511b0f7f",
  "queries": [
    "network.xyo.query.node.attach",
    "network.xyo.query.node.detach",
    "network.xyo.query.node.attached",
    "network.xyo.query.node.registered",
    "network.xyo.query.module.discover",
    "network.xyo.query.module.address",
    "network.xyo.query.module.subscribe",
    "network.xyo.query.module.describe",
    "network.xyo.query.module.manifest"
  ],
  "schema": "network.xyo.module.description",
  "children": [
    "9bc820c2e1f957cb6bf4d4c92535840f60481520",
    "ac4e2089b79cc356b6afbc1444677c1b37f68078"
  ]
}"
`;

exports[`MemoryNode description node with nested nodes and modules serializes to JSON consistently 1`] = `
"{
  "address": "aaf896a51d6e2f7c81d6c9d6fdb41349d7a84957",
  "queries": [
    "network.xyo.query.node.attach",
    "network.xyo.query.node.detach",
    "network.xyo.query.node.attached",
    "network.xyo.query.node.registered",
    "network.xyo.query.module.discover",
    "network.xyo.query.module.address",
    "network.xyo.query.module.subscribe",
    "network.xyo.query.module.describe",
    "network.xyo.query.module.manifest"
  ],
  "schema": "network.xyo.module.description",
  "children": []
}"
`;

exports[`MemoryNode description node without child modules serializes to JSON consistently 1`] = `
"{
  "address": "a37165cbdae8d9016c7673626ca464e4fdebf8fb",
  "queries": [
    "network.xyo.query.node.attach",
    "network.xyo.query.node.detach",
    "network.xyo.query.node.attached",
    "network.xyo.query.node.registered",
    "network.xyo.query.module.discover",
    "network.xyo.query.module.address",
    "network.xyo.query.module.subscribe",
    "network.xyo.query.module.describe",
    "network.xyo.query.module.manifest"
  ],
  "schema": "network.xyo.module.description",
  "children": []
}"
`;
